fix overflow

--- a/front-end/public/assets/simple-sidebar.css
+++ b/front-end/public/assets/simple-sidebar.css
@@ -113,10 +113,12 @@
 
     #wrapper.toggled {
         padding-left: 50px;
+        overflow:hidden;
     }
 
     #sidebar-wrapper {
         width: 50px;
+        overflow:hidden;
     }
 
     #wrapper.toggled #sidebar-wrapper {
